--- a/Jack-and-Maurice-A.I/index.html
+++ b/Jack-and-Maurice-A.I/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Jack & Maurice A.I.</title>
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header class="header">
         <h1 class="logo">Sara Follador</h1>
         <nav class="main-nav">
@@ -28,6 +29,7 @@
     </header>
 
     <main>
+        <!-- HERO SECTION -->
         <section class="section-hero">
             <div class="hero">
                 <h1 class="heading-primary">Tired of spending a fortune on full human intervention for your
@@ -38,19 +40,14 @@
                     saving you significant
                     time and money.
                 </p>
-                <a href="#" class="btn btn--full">Talk with Jack and Maurice</a>
+                <a href="#" class="btn full-white-deco">Talk with Jack and Maurice</a>
             </div>
         </section>
 
         <section class="services-section" id="services">
             <div class="services-container-1">
                 <div class="services-img">
-                    <h4 class="e-point e-size-1">BRANDING</h4>
-                    <h4 class="e-point  e-size-2">SOCIAL</h4>
-                    <h4 class="e-point  e-size-3">SEO</h4>
-                    <h4 class="e-point  e-size-4">MARKETING</h4>
-                    <h4 class="e-point  e-size-5">ADVERTISING</h4>
-                    <img src="img/Office woman 2 .png" alt="Office woman" width="70%">
+                    <img src="img/Office Women 2.webp" alt="amazed-0ffice-woman" width="85%">
                 </div>
 
                 <div class="services-advantage">
@@ -61,41 +58,40 @@
                         </h2>
                     </div>
                     <div class="services-adv ">
-                        <div><img src="img/Icône.svg" alt=""></div>
+                        <div><img src="img/Icône.svg" alt="icon"></div>
 
                         <div class="text-adv"><span class="text-adv-accent">Timely AI-driven Insights</span>
                             Keep ahead of the curve with AI-generated insights in real time.</div>
 
-                        <div><img src="img/Icône (1).svg" alt=""></div>
+                        <div><img src="img/Icône (1).svg" alt="icon"></div>
                         <div class="text-adv"> <span class="text-adv-accent"> Strategic Recommendations</span>
                             Immediate smart suggestions by our virtual strategist, Maurice</div>
 
-                        <div><img src="img/Icône (2).svg" alt=""></div>
+                        <div><img src="img/Icône (2).svg" alt="icon"></div>
                         <div class="text-adv"> <span class="text-adv-accent"> No Downloads Necessary</span>
                             Our web-based system means no hassle of downloads.</div>
 
-                        <div><img src="img/Icône (3).svg" alt=""></div>
+                        <div><img src="img/Icône (3).svg" alt="icon"></div>
                         <div class="text-adv"> <span class="text-adv-accent">No Downloads Necessary</span>
                             Our web-based system means no hassle of downloads.</div>
                     </div>
                 </div>
-
             </div>
-            <a href="#" class="btn-secondary">Empower my Business</a>
+            <a href="#" class="btn-secondary btn empty-white-deco ">Empower my Business</a>
         </section>
-
+        <!-- SERVICES -->
         <section class="services-section">
             <div class="service-container-2">
                 <div>
-                    <img class="deco" src="img/Decoration.png" alt="">
+                    <img class="deco" src="img/decoration.webp" alt="">
                     <h2 class="heading-secondary">
                         Empower Your Business with Maurice's <br> Virtual Strategizing
                     </h2>
                 </div>
-                <div class="seconde-offer">
-                    <div><img src="img/Saving-money.png" alt="saving-money-illustration" width="70%"></div>
-                    <div><img src="img/Excellency.png" alt="Excellency-illustration" width="70%"></div>
-                    <div><img src="img/Productivity.png" alt="Productivity-illustration" width="70%"></div>
+                <div class="seconde-offer  second-offer-mb ">
+                    <div><img src="img/saving-money.webp" alt="saving-money-illustration" width="70%"></div>
+                    <div><img src="img/excellency.webp" alt="Excellency-illustration" width="70%"></div>
+                    <div><img src="img/productivity.webp" alt="Productivity-illustration" width="70%"></div>
                     <div class="text-offer">
                         <span class="text-offer-accent"> No More Hefty Bills</span>
                         Eliminate excessive bills with our cost-efficient AI algorithms.
@@ -114,18 +110,17 @@
                 </div>
 
             </div>
-            <a href="#" class="btn-secondary">Empower my Business</a>
+            <a href="#" class="btn-secondary  empty-white-deco">Empower my Business</a>
         </section>
-
+        <!-- PRICING -->
         <section class="pricing-section" id="pricing">
             <div class="pricing-container">
-
                 <div>
-                    <h2 class="heading-primary"> Jack and Maurice A.I.</h2>
+                    <h2 class="heading-primary  p-title"> Jack and Maurice A.I.</h2>
                 </div>
-                <div class="offers">
-                    <img class="maurice" src="img/Maurice.png" alt="">
-                    <img class="jack" src="img/Jack.png" alt="">
+                <div class="offers offers-mb">
+                    <img class="maurice" src="img/maurice.webp" alt="maurice-picture">
+                    <img class="jack" src="img/jack.webp" alt="jack-picture">
                     <div class="box">
 
                         <div class="price">
@@ -147,7 +142,7 @@
                                 </li>
                             </ul>
                         </div> <br>
-                        <a href="#" class="btn-tertiary">Talk with Jack</a>
+                        <a href="#" class="btn-tertiary left-black-full-deco  ">Talk with Jack</a>
                     </div>
                     <div class="box">
 
@@ -172,18 +167,20 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="#" class="btn-tertiary">Talk with Maurice</a>
+                        <a href="#" class="btn-tertiary right-black-full-deco  ">Talk with Maurice</a>
                     </div>
 
                 </div>
             </div>
         </section>
+
+        <!-- ABOUT -->
         <section class="about-section" id="about">
             <div class="about-container">
                 <div class="left-side">
                     <h2 class="heading-secondary">Start Your Risk-free Trial Today</h2>
                     <div class="part-one">
-                        <div><img src="img/Check.svg" alt=""></div>
+                        <div><img src="img/Check.svg"></div>
                         <div class="text-about">Achieve 30x speed in marketing delivery</div>
                         <div><img src="img/Check.svg" alt=""></div>
                         <div class="text-about">Save significantly on costs</div>
@@ -198,6 +195,7 @@
                             to traditional human
                             intervention.
                             <br>
+                            <br>
                             Our advanced AI algorithms work tirelessly around the clock, delivering results and insights
                             24/7.
                             Gone are the days of waiting for human strategists to respond, as Jacques & Maurice are
@@ -209,7 +207,7 @@
                 <div class="right-side">
 
                     <form action="" method="get">
-                        <img class="img-dec" src="img/image-dec.svg" alt="" width="100%">
+                        <img class="img-dec" src="img/image-dec.webp" alt="" width="100%">
                         <div class="form-style">
                             <label for="name">Full name</label>
                             <input type="text" name="name" id="name" required>
@@ -218,14 +216,15 @@
                             <label for="email">Email</label>
                             <input type="email" name="email" id="email" required>
                         </div>
-                        <div class="form-style ">
-                            <input class="submit-btn" type="submit" value="Register for new features" />
+                        <div class="form-style">
+                            <input class="submit-btn empty-white-deco  " type="submit"
+                                value="Register for new features" />
                         </div>
                     </form>
                 </div>
             </div>
         </section>
-
+        <!-- FOOTER -->
         <Footer class="footer-section">
             <div class="footer-container">
                 <div class="footer-info">
@@ -243,8 +242,8 @@
                     </div>
                 </div>
                 <di class="take-action">
-                    <img src="img/Trophy.png" alt="" width="70%">
-                    <a href="#" class="btn-secondary">Empower my LinkedIn</a>
+                    <img src="img/trophy.webp" alt="" width="70%">
+                    <a href="#" class="btn-secondary full-white-deco">Empower my LinkedIn</a>
             </div>
             </div>
         </Footer>
