--- a/Jack-and-Maurice-A.I/index.html
+++ b/Jack-and-Maurice-A.I/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn-secondary btn empty-white-deco ">Empower my Business</a>
+            <a href="#" class="btn-secondary empty-white-deco ">Empower my Business</a>
         </section>
         <!-- SERVICES -->
         <section class="services-section">
