--- a/Jack-and-Maurice-A.I/index.html
+++ b/Jack-and-Maurice-A.I/index.html
@@ -119,55 +119,66 @@
                     <h2 class="heading-primary  p-title"> Jack and Maurice A.I.</h2>
                 </div>
                 <div class="offers offers-mb">
-                    <img class="maurice" src="img/maurice.webp" alt="maurice-picture">
-                    <img class="jack" src="img/jack.webp" alt="jack-picture">
-                    <div class="box">
 
-                        <div class="price">
-                            <p class=" price-p"> <span class="new-cost">30$</span> per use <br> instead of <span
-                                    class="prev-cost">90$</span></p>
-                            <h4>Jacques - Your LinkedIn Paid Ads Content Generator</h4>
+                    <div class="add-jack">
+                        <div><img class="jack" src="img/jack.webp" alt="jack-picture"></div>
+
+                        <div class="box">
+
+                            <div class="price">
+                                <p class=" price-p"> <span class="new-cost">30$</span> per use <br> instead of <span
+                                        class="prev-cost">90$</span></p>
+                                <h4>Jacques - Your LinkedIn Paid Ads Content Generator</h4>
+                            </div>
+                            <div class="features">
+                                <ul class="features-list">
+                                    <li>User-Friendly Content Creation</li>
+                                    <li>Effortlessly create engaging ad content with a user-friendly interface.</li>
+                                    <li>Receive AI-generated expert advice to maximize the impact of your LinkedIn ads.
+                                    </li>
+                                    <li>Expert Guidance</li>
+                                    <li>Time Efficiency</li>
+                                    <li>Save significant time with Jacques' rapid and efficient content creation
+                                        process.
+                                    </li>
+                                    <li>Adaptability</li>
+                                    <li>Suitable for novices and seasoned marketers, Jacques adapts to your specific
+                                        needs.
+                                    </li>
+                                </ul>
+                            </div> <br>
+                            <a href="#" class="btn-tertiary left-black-full-deco  ">Talk with Jack</a>
                         </div>
-                        <div class="features">
-                            <ul class="features-list">
-                                <li>User-Friendly Content Creation</li>
-                                <li>Effortlessly create engaging ad content with a user-friendly interface.</li>
-                                <li>Receive AI-generated expert advice to maximize the impact of your LinkedIn ads.</li>
-                                <li>Expert Guidance</li>
-                                <li>Time Efficiency</li>
-                                <li>Save significant time with Jacques' rapid and efficient content creation process.
-                                </li>
-                                <li>Adaptability</li>
-                                <li>Suitable for novices and seasoned marketers, Jacques adapts to your specific needs.
-                                </li>
-                            </ul>
-                        </div> <br>
-                        <a href="#" class="btn-tertiary left-black-full-deco  ">Talk with Jack</a>
                     </div>
-                    <div class="box">
+                    <div class="add-maurice">
+                        <div><img class="maurice" src="img/maurice.webp" alt="maurice-picture"></div>
+                        <div class="box">
 
-                        <div class="price">
-                            <p class=" price-p"><span class="new-cost">499$</span><br> instead of <span
-                                    class="prev-cost">2400$</span></p>
-                            <h4>Maurice - Your Virtual LinkedIn Communication Strategist</h4>
+                            <div class="price">
+                                <p class=" price-p"><span class="new-cost">499$</span><br> instead of <span
+                                        class="prev-cost">2400$</span></p>
+                                <h4>Maurice - Your Virtual LinkedIn Communication Strategist</h4>
+                            </div>
+                            <div class="features">
+                                <ul class="features-list">
+                                    <li>Personalized Expertise</li>
+                                    <li>Benefit from personalized recommendations directly within your LinkedIn
+                                        workspace.
+                                    </li>
+                                    <li>Optimized Strategy</li>
+                                    <li>Get precise recommendations to refine and maximize your impact on LinkedIn.</li>
+                                    <li>Full Adaptability</li>
+                                    <li>Customized actions tailored to your goals, whether it's visibility, lead
+                                        generation,
+                                        or industry authority.
+                                    </li>
+                                    <li>Performance Tracking</li>
+                                    <li>Measure your LinkedIn efforts with detailed performance analytics.
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="#" class="btn-tertiary right-black-full-deco  ">Talk with Maurice</a>
                         </div>
-                        <div class="features">
-                            <ul class="features-list">
-                                <li>Personalized Expertise</li>
-                                <li>Benefit from personalized recommendations directly within your LinkedIn workspace.
-                                </li>
-                                <li>Optimized Strategy</li>
-                                <li>Get precise recommendations to refine and maximize your impact on LinkedIn.</li>
-                                <li>Full Adaptability</li>
-                                <li>Customized actions tailored to your goals, whether it's visibility, lead generation,
-                                    or industry authority.
-                                </li>
-                                <li>Performance Tracking</li>
-                                <li>Measure your LinkedIn efforts with detailed performance analytics.
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#" class="btn-tertiary right-black-full-deco  ">Talk with Maurice</a>
                     </div>
 
                 </div>
